--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.25",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.13.2",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
